# obsidian-plugin-python-bridge

./: .eslintignore  .eslintrc  .eslintrc.json  .gitignore  .prettierrc  LICENSE  ObsidianPluginDevPythonToJS.py  PYTHON_LIBRARY_DOCS.md  PYTHON_LIBRARY_DOCS.md.md  PythonClientLibrary.md  README.md  data.json  eslint.config.js  main.js  manifest.json  package-lock.json  package.json  pyproject.toml  rollup.config.js  styles.css  tsconfig.json  version-bump.mjs  versions.json
.husky/: pre-commit
docs/: PYTHON_LIBRARY_DOCS.md
obsidian_python_bridge/: __init__.py  _client.py  _config.py  _editor.py  _events.py  _events_api.py  _exceptions.py  _frontmatter.py  _links.py  _notes.py  _settings.py  _transport.py  _ui.py  _vault.py  _version.py
scripts/: bump-version.ts
src/: ActivationWarningModal.ts  PythonBridgeSettingTab.ts  ScriptSelectionModal.ts  UserInputModal.ts  action_handler.ts  action_registry.ts  audit_logger.ts  constants.ts  environment_checker.ts  event_handler.ts  main.ts  obsidian_api.ts  python_env.ts  python_executor.ts  types.ts
src/api/: active-note-content.ts  active-note-file.ts  active-note-frontmatter.ts  active-note-path.ts  advanced-editor.ts  backlinks.ts  commands.ts  editor-context.ts  editor-selection.ts  folder-operations.ts  links.ts  note-content.ts  note-crud.ts  note-frontmatter.ts  note-opening.ts  obsidian-info.ts  tags.ts  theme-control.ts  theme-mode.ts  vault-info.ts
src/lang/: ar.ts  bn.ts  cs.ts  de.ts  el.ts  en.ts  es.ts  fa.ts  fi.ts  fil.ts  fr.ts  ha.ts  hi.ts  hu.ts  id.ts  ig.ts  it.ts  ja.ts  ko.ts  ms.ts  nl.ts  pl.ts  pt.ts  ro.ts  ru.ts  sv.ts  sw.ts  th.ts  tr.ts  translations.ts  uk.ts  ur.ts  vi.ts  yo.ts  zh.ts  zht.ts
